# test_webserver

./: .dockerignore  .gitignore  Dockerfile.aiohttp  Dockerfile.consumer  README.md  api.py  app.py  consume_app.py  docker-compose.yml  docker-consumer-entrypoint.sh  docker-entrypoint.sh  env.save  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 219961dd06bf_add_extension_type_for_image.py  fec64331e7f6_create_model_image.py
config/: settings.py
core/: __init__.py  app.py  base.py
db/: base.py  deps.py  session.py
web_app/: main.py  models.py  schemas.py  services.py
web_app/rabbit/: consumer.py  publish.py
web_app/views/: api.py  app.py
