[tool.poetry]
name = "simple-project"
version = "0.1.0"
description = "simple project for testing task"
authors = ["Zhanat <janat.200066@gmail.com>"]
readme = "README.md"
packages = [{include = "simple_project"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.19"
alembic = "^1.11.1"
aiohttp = "^3.8.5"
pydantic = "1.10.6"
asyncpg = "^0.28.0"
greenlet = "^2.0.2"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.6"
aiofiles = "^23.1.0"
aio-pika = "^9.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
